deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coleman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coleman
  template:
    metadata:
      labels:
        app: coleman
    spec:
      containers:
        - name: coleman
          image: mailinenguyen/coleman
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
                valueFrom:
                  secretKeyRef:
                    name: postgres-test-postgresql
                    key: postgres-password
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://postgres-test-postgresql
